# esp32-c3-rid

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_and_release.yml
components/opendroneid/: CMakeLists.txt  idf_component.yml  opendroneid.c  wifi.c
docs/: README.md
main/: CMakeLists.txt  app_main.c  crid_config.c  crid_config.h  crid_display.h  crid_json.h  crid_messages.c  crid_nvs.c  crid_parser_astm.c  crid_parser_common.c  crid_parser_gb42590.c  crid_parser_gb46750.c  crid_parser_gb46750.c.repaired  crid_patrol.c  crid_serial.c  crid_serial.h  crid_sim.c  crid_sniffer.c  crid_tracker.c  crid_tracker.h  crid_web.c  crid_web.h  crid_wifi.c  index_html.h
main/web/: index.html
main_rx/: CMakeLists.txt  app_main.c  crid_display.c  crid_enum_names.h  crid_json.c  crid_ota.c  crid_ota_internal.h  crid_ota_web.h  crid_parser.h  crid_parser_common.c  crid_parser_gb46750.c  crid_rx_types.h  crid_sniffer.c  crid_sniffer.h  crid_usb_net.c  crid_usb_net.h  crid_web.c  crid_web_api.c  crid_web_api.h  idf_component.yml
main_tx/: CMakeLists.txt  crid-sim.c  crid_config.c  crid_messages.h  crid_patrol.h  crid_wifi.c  crid_wifi.h
partition_table/: partitionTable.csv
rid_server/: database.py  main.py  receiver.py  rid_data.db  rid_data.db-wal  server.py  simulator.py
rid_server/templates/: index.html
tools/: china_crid_receiver_fixed.py  esp32monitor.py  ota_util.py  pyproject.toml  ridscanner-usb.py
